--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,42 @@
         "stepnumber",
         "stringstyle",
         "tabsize"
-    ]
+    ],
+    "files.exclude": {
+        "**/.git": true,
+        "**/.svn": true,
+        "**/.hg": true,
+        "**/CVS": true,
+        "**/.DS_Store": true,
+        "**/Thumbs.db": true,
+        "**/report.toc": true,
+        "*.toc": true,
+        "report.toc": true,
+        "**/*.toc": true,
+        "**/report.out": true,
+        "*.out": true,
+        "report.out": true,
+        "**/*.out": true,
+        "**/report.fls": true,
+        "*.fls": true,
+        "report.fls": true,
+        "**/*.fls": true,
+        "**/report.fdb_latexmk": true,
+        "*.fdb_latexmk": true,
+        "report.fdb_latexmk": true,
+        "**/*.fdb_latexmk": true,
+        "**/report.aux": true,
+        "*.aux": true,
+        "report.aux": true,
+        "**/*.aux": true,
+        "**/indent.log": true,
+        "*.log": true,
+        "indent.log": true,
+        "**/*.log": true,
+        "**/report.synctex.gz": true,
+        "*.gz": true,
+        "report.synctex.gz": true,
+        "**/*.gz": true
+    },
+    "explorerExclude.backup": {}
 }
